compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__bools__binop_panic_left.snap
---
source: compiler-core/src/nix/tests/bools.rs
expression: "pub fn negate(x) {\n    panic && x\n}"
---
let
  inherit (builtins.import ./../gleam.nix) makeError;
  
  negate =
    x:
    (builtins.throw
      (makeError "panic" "my/mod" 2 "negate" "panic expression evaluated" { })) && x;
in { inherit negate; }
