compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__bools__binop_todo_left.snap
---
source: compiler-core/src/nix/tests/bools.rs
expression: "pub fn negate(x) {\n    todo && x\n}"
---
let
  inherit (builtins.import ./../gleam.nix) makeError;
  
  negate =
    x:
    (builtins.throw
      (makeError
        "todo"
        "my/mod"
        2
        "negate"
        "This has not yet been implemented"
        { })) && x;
in { inherit negate; }
