compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__bools__case.snap
---
source: compiler-core/src/nix/tests/bools.rs
expression: "\nfn go(a) {\n  case a {\n    True -> 1\n    False -> 0\n  }\n}\n"
---
let go = a: if a then 1 else 0; in { }
