compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__bools__equality.snap
---
source: compiler-core/src/nix/tests/bools.rs
expression: "\nfn go(a, b) {\n  a == True\n  a != True\n  a == False\n  a != False\n  a == a\n  a != a\n  b == Nil\n  b != Nil\n  b == b\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go(a, b) {
  a == True
  a != True
  a == False
  a != False
  a == a
  a != a
  b == Nil
  b != Nil
  b == b
}


----- COMPILED NIX
let
  inherit (builtins.import ./../gleam.nix) seqAll;
  
  go =
    a: b:
    let
      _' = a == true;
      _'1 = a != true;
      _'2 = a == false;
      _'3 = a != false;
      _'4 = a == a;
      _'5 = a != a;
      _'6 = b == null;
      _'7 = b != null;
    in
    seqAll [ _' _'1 _'2 _'3 _'4 _'5 _'6 _'7 ] (b == b);
in
{ }
