compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__bools__expressions.snap
---
source: compiler-core/src/nix/tests/bools.rs
expression: "\nfn go() {\n    True\n    False\n    Nil\n}\n"
---
let
  inherit (builtins.import ./../gleam.nix) seqAll;
  
  go = { }: let _' = true; _'1 = false; in seqAll [ _' _'1 ] null;
in { }
