compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__bools__negation.snap
---
source: compiler-core/src/nix/tests/bools.rs
expression: "pub fn negate(x) {\n    !x\n}"
snapshot_kind: text
---
----- SOURCE CODE
pub fn negate(x) {
    !x
}

----- COMPILED NIX
let negate = x: !x; in { inherit negate; }
